--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: web-api
     build:
       context: .
-      dockerfile: src/Web.Api/Dockerfile
+      dockerfile: src/AuctionApi/Dockerfile
     ports:
       - 5000:8080
       - 5001:8081
