--- a/tests/ArchitectureTests/ArchitectureTests.csproj
+++ b/tests/ArchitectureTests/ArchitectureTests.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Web.Api\Web.Api.csproj" />
+    <ProjectReference Include="..\..\src\AuctionApi\AuctionApi.csproj" />
   </ItemGroup>
 
 </Project>
