--- a/src/AuctionApi/Dockerfile
+++ b/src/AuctionApi/Dockerfile
@@ -14,23 +14,23 @@ ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Directory.Packages.props", "."]
 COPY ["Directory.Build.props", "."]
-COPY ["src/Web.Api/Web.Api.csproj", "src/Web.Api/"]
+COPY ["src/AuctionApi/AuctionApi.csproj", "src/AuctionApi/"]
 COPY ["src/Infrastructure/Infrastructure.csproj", "src/Infrastructure/"]
 COPY ["src/Application/Application.csproj", "src/Application/"]
 COPY ["src/Domain/Domain.csproj", "src/Domain/"]
 COPY ["src/SharedKernel/SharedKernel.csproj", "src/SharedKernel/"]
-RUN dotnet restore "./src/Web.Api/Web.Api.csproj"
+RUN dotnet restore "./src/AuctionApi/AuctionApi.csproj"
 COPY . .
-WORKDIR "/src/src/Web.Api"
-RUN dotnet build "./Web.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/AuctionApi"
+RUN dotnet build "./AuctionApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Web.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./AuctionApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Web.Api.dll"]
+ENTRYPOINT ["dotnet", "AuctionApi.dll"]
