Comment out docker compose up command
Comment out the command to start the container with the new image.

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -46,4 +46,4 @@ jobs:
  #         docker rmi ghcr.io/elitonperoni/auction-api/auction-api:latest || true                  
           
           # Suba o container com a nova imagem
-          docker compose up -d
+#          docker compose up -d
