--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,20 +30,15 @@ jobs:
         docker push ghcr.io/elitonperoni/auction-api/auction-api:${GITHUB_SHA} 
 
 # 5. Conectar-se ao servidor via SSH e fazer as operações no servidor
-#    - name: Deploy to server
-#      uses: appleboy/ssh-action@v0.1.7
-#      with:
-#        host: ${{ secrets.SERVER_HOST }}
-#        username: ${{ secrets.SERVER_USER }}
-#        key: ${{ secrets.SSH_PRIVATE_KEY }}
-##        port: 22
-#        script: |
-#          # Pare o container atual
-#          cd /var/docker/auction-api
- #         docker compose down
-
-          # Remova a imagem antiga
- #         docker rmi ghcr.io/elitonperoni/auction-api/auction-api:latest || true                  
-          
-          # Suba o container com a nova imagem
-#          docker compose up -d
+    - name: Deploy to server
+      uses: appleboy/ssh-action@v0.1.7
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |        
+          cd /var/docker/auction-api
+          docker compose down
+          docker rmi ghcr.io/elitonperoni/auction-api/auction-api:latest || true                  
+          docker compose up -d
