adjustment detail product

--- a/src/AuctionApi/appsettings.Development.json
+++ b/src/AuctionApi/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=postgres;Port=5432;Database=auction;Username=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Host=54.167.188.217;Port=5432;Database=auction-dev;Username=admin;Password=Systemdba123!@#;Include Error Detail=true; Timeout=120"
   },
   "Serilog": {
     "Using": [
