adjustments reset and recovery password

--- a/src/AuctionApi/appsettings.Development.json
+++ b/src/AuctionApi/appsettings.Development.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "Database": ""
   },
+  "SecretsApi": {
+    "MailAddress": "",
+    "MailPassword": "",
+    "WebUrl": "",
+    "Environment": ""
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
