--- a/src/AuctionApi/appsettings.json
+++ b/src/AuctionApi/appsettings.json
@@ -3,6 +3,12 @@
   "ConnectionStrings": {
     "Database": ""
   },
+  "SecretsApi": {
+    "MailAddress": "",
+    "MailPassword": "",
+    "WebUrl": "",
+    "Environment": ""
+  },
   "Jwt": {
     "Secret": "",
     "Issuer": "",
