adjustments save photos products

--- a/src/AuctionApi/appsettings.Development.json
+++ b/src/AuctionApi/appsettings.Development.json
@@ -8,6 +8,13 @@
     "WebUrl": "",
     "Environment": ""
   },
+  "AWS": {
+    "Profile": "",
+    "Region": "",
+    "AccessKey": "",
+    "SecretKey": "",
+    "BucketName": ""
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
