--- a/src/AuctionApi/appsettings.json
+++ b/src/AuctionApi/appsettings.json
@@ -3,6 +3,11 @@
   "ConnectionStrings": {
     "Database": ""
   },
+  "RabbitMq": {
+    "Host": "",
+    "Username": "",
+    "Password": ""
+  },
   "SecretsApi": {
     "MailAddress": "",
     "MailPassword": "",
