--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,5 +51,5 @@ jobs:
           cd docker/api-auction
           docker compose down
           docker rmi ghcr.io/elitonperoni/auction-api/auction-api:latest || true         
-          ghcr.io/elitonperoni/auction-api/auction-worker:latest || true
+          docker rmi ghcr.io/elitonperoni/auction-api/auction-worker:latest || true
           docker compose up -d
