--- a/src/AuctionApi/appsettings.json
+++ b/src/AuctionApi/appsettings.json
@@ -1,5 +1,8 @@
 {
   "AllowedHosts": "*",
+  "AllowedOrigins": [
+    "https://auction.openprojects.com.br"
+  ],
   "ConnectionStrings": {
     "Database": ""
   },
