--- a/src/AuctionApi/appsettings.Development.json
+++ b/src/AuctionApi/appsettings.Development.json
@@ -9,7 +9,8 @@
     "MailAddress": "",
     "MailPassword": "",
     "WebUrl": "",
-    "Environment": ""
+    "Environment": "",
+    "Domain": ""
   },
   "AWS": {
     "Profile": "",
